--- a/Source/XsdDocumentation.Build/XsdDocumentation.Build.csproj
+++ b/Source/XsdDocumentation.Build/XsdDocumentation.Build.csproj
@@ -60,6 +60,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="GetFileVersion.cs" />
     <Compile Include="RemoveTfsBindings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
