Add option 'NamespaceContainer'
Add this option to disable the namespace topic generation if the schema
set only contains a single namespace. If there are multiple namespaces,
ignore this option.

This options is useful for cases where the target namespace is empty.

--- a/Main/Source/XsdDocumentation/XsdDocumentation.csproj
+++ b/Main/Source/XsdDocumentation/XsdDocumentation.csproj
@@ -123,6 +123,7 @@
     <Content Include="Resources\ComplexTypeTopic.xml" />
     <Content Include="Resources\AttributeTopic.xml" />
     <Content Include="Resources\AttributeGroupTopic.xml" />
+    <Content Include="Resources\SchemaSetNamespaceTopic.xml" />
     <Content Include="Resources\SchemaSetTopic.xml" />
     <Content Include="Resources\SchemaTopic.xml" />
     <Content Include="Resources\OverviewTopic.xml" />
