--- a/Dev/ContentWriter/Source/XsdDocumentation.BuildComponents/XsdDocumentation.BuildComponents.csproj
+++ b/Dev/ContentWriter/Source/XsdDocumentation.BuildComponents/XsdDocumentation.BuildComponents.csproj
@@ -60,6 +60,11 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="XsdResolveLinksComponent.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +76,12 @@
   <ItemGroup>
     <None Include="App.config">
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
