Add validation to help file generation
Emit warnings for problematic cases and include documentation that
explains those.

--- a/Dev/ContentWriter/Source/XsdDocumentation.PlugIn/XsdDocumentation.PlugIn.csproj
+++ b/Dev/ContentWriter/Source/XsdDocumentation.PlugIn/XsdDocumentation.PlugIn.csproj
@@ -78,6 +78,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="HelpTopics.cs" />
+    <Compile Include="MessageReporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configuration\SchemaDependencyFilePathsEditor.cs" />
     <Compile Include="Configuration\SchemaFilePathsEditor.cs" />
