--- a/Source/XsdDocumentation.BuildComponents/App.config
+++ b/Source/XsdDocumentation.BuildComponents/App.config
@@ -13,4 +13,7 @@
     <hidden />
     <defaultConfiguration />
   </component>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
 </components>
