Replace HintPath by proper reference
Mark the dependency on the SHFB library as non-private so that we don't
have to delete the libraries from the build anymore.

--- a/Source/XsdDocumentation.BuildComponents/XsdDocumentation.BuildComponents.csproj
+++ b/Source/XsdDocumentation.BuildComponents/XsdDocumentation.BuildComponents.csproj
@@ -34,9 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="BuildAssemblerLibrary">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(DXROOT)\ProductionTools\BuildAssemblerLibrary.dll</HintPath>
+    <Reference Include="$(DXROOT)\ProductionTools\BuildAssemblerLibrary.dll">
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
