--- a/Source/XsdDocumentation.PlugIn/XsdDocumentation.PlugIn.csproj
+++ b/Source/XsdDocumentation.PlugIn/XsdDocumentation.PlugIn.csproj
@@ -34,9 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Build" />
-    <Reference Include="SandcastleBuilder.Utils">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(SHFBROOT)\SandcastleBuilder.Utils.dll</HintPath>
+    <Reference Include="$(SHFBROOT)\SandcastleBuilder.Utils.dll">
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
