Make plug-in and component compatible with SHFB
The current version of SHFB (2014.4.22.0) has made a few changes that
requires work:

- Plug-ins and components are now MEF exports
- Sandcastle is no longer external
- SHFBCOMPONENTROOT is replaced with ComponentPath
- Plug-in DLLs are no longer named *.plugins
- Build components no longer need *.components files

--- a/src/XsdDocumentation.BuildComponents/XsdDocumentation.BuildComponents.csproj
+++ b/src/XsdDocumentation.BuildComponents/XsdDocumentation.BuildComponents.csproj
@@ -35,10 +35,11 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="$(DXROOT)\ProductionTools\BuildAssemblerLibrary.dll">
+    <Reference Include="$(SHFBROOT)\Sandcastle.Core.dll">
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -59,10 +60,6 @@
       <Project>{31429526-548B-4F1F-9F68-E22EF9D92658}</Project>
       <Name>XsdDocumentation</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config">
-    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
